# auto_gippity

./: .env.example  Cargo.toml  README
schemas/: api_schema.json
src/: main.rs
src/ai_functions/: aifunc_backend.rs
src/apis/: call_request.rs
src/helpers/: command_line.rs  general.rs
src/models/: mod.rs
src/models/agent_basic/: basic_agent.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
src/models/agents_manager/: managing_agent.rs
src/models/general/: llm.rs
